// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterableCitySelector should render 1`] = `
<FilterableCitySelector__Container>
  <Heading />
  <ScrollingSearchBox
    filterText=""
    onFilterTextChange={[Function]}
    onStickyTopChanged={[Function]}
    placeholderText="searchCity"
    spaceSearch={false}
  >
    <CitySelector
      cities={
        Array [
          CityModel {
            "_code": "city",
            "_eventsEnabled": false,
            "_extrasEnabled": false,
            "_live": true,
            "_name": "City",
            "_sortingName": "City",
          },
          CityModel {
            "_code": "otherCity",
            "_eventsEnabled": false,
            "_extrasEnabled": false,
            "_live": true,
            "_name": "Other city",
            "_sortingName": "Other City",
          },
          CityModel {
            "_code": "nonlive",
            "_eventsEnabled": false,
            "_extrasEnabled": false,
            "_live": false,
            "_name": "Not-live",
            "_sortingName": "Not-live",
          },
          CityModel {
            "_code": "yetanothercity",
            "_eventsEnabled": false,
            "_extrasEnabled": false,
            "_live": true,
            "_name": "Yet another city",
            "_sortingName": "Yet another city",
          },
        ]
      }
      filterText=""
      language="de"
      stickyTop={0}
    />
  </ScrollingSearchBox>
</FilterableCitySelector__Container>
`;

exports[`FilterableCitySelector should update filter text 1`] = `
<FilterableCitySelector__Container>
  <Heading />
  <ScrollingSearchBox
    filterText="City"
    onFilterTextChange={[Function]}
    onStickyTopChanged={[Function]}
    placeholderText="searchCity"
    spaceSearch={false}
  >
    <CitySelector
      cities={
        Array [
          CityModel {
            "_code": "city",
            "_eventsEnabled": false,
            "_extrasEnabled": false,
            "_live": true,
            "_name": "City",
            "_sortingName": "City",
          },
          CityModel {
            "_code": "otherCity",
            "_eventsEnabled": false,
            "_extrasEnabled": false,
            "_live": true,
            "_name": "Other city",
            "_sortingName": "Other City",
          },
          CityModel {
            "_code": "nonlive",
            "_eventsEnabled": false,
            "_extrasEnabled": false,
            "_live": false,
            "_name": "Not-live",
            "_sortingName": "Not-live",
          },
          CityModel {
            "_code": "yetanothercity",
            "_eventsEnabled": false,
            "_extrasEnabled": false,
            "_live": true,
            "_name": "Yet another city",
            "_sortingName": "Yet another city",
          },
        ]
      }
      filterText="City"
      language="de"
      stickyTop={0}
    />
  </ScrollingSearchBox>
</FilterableCitySelector__Container>
`;
